# pants-ocaml

./: .gitignore  CLAUDE.md  DEVELOPMENT.md  README.org  __init__.py  pants.toml  providers.py  pyproject.toml  register.py  rules.py  subsystem.py  target_types.py
.github/workflows/: ci.yml  code-quality.yml
ocaml/: BUILD  providers.py  register.py  rules.py  subsystem.py  target_types.py
tests/: BUILD  conftest.py
tests/integration/: BUILD  test_compile_rules.py  test_ocaml_binary.py
tests/unit/: BUILD  test_providers.py  test_rules.py  test_subsystem.py  test_target_types.py
